<resources>
    <string name="app_name">FoodBye</string>
    <string name="title_mis_pedidos">Mis pedidos</string>
    <string name="title_pedidos">Pedidos</string>
    <string name="title_editusers">Mi perfil</string>
    <string name="login_username">Introduzca su email</string>
    <string name="login_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="login_register">Registrarse</string>
    <string name="register_fullname">Nombre completo</string>
    <string name="register_email">Email</string>
    <string name="register_telefono">Teléfono</string>
    <string name="hint_register_pass1">Password</string>
    <string name="hint_register_password2">Repita la Password</string>
    <string name="button_registro">REGISTRARSE</string>
    <string name="btn_profile_save">GUARDAR</string>
    <string name="profile_password">Cambiar contraseña</string>
    <string name="profile_edit_password">Introduzca la contraseña actual</string>
    <string name="profile_edit_newpassword1">Nueva contraseña</string>
    <string name="profile_edit_newpassword2">Repita la contraseña</string>
    <string name="profile_title_changEpassword">MODIFICAR CONTRASEÑA</string>
    <string name="profile_title_changeavatar">MODIFICAR AVATAR</string>
    <string name="btn_save_newavatar">GUARDAR</string>
    <string name="menu_logout">Logout</string>
    <string name="pedido_list_alert">Pendiente</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
        \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
    </string>
    <string name="text_titulo_pedido">Titulo-Pedido</string>
    <string name="text_origen_destino">Origen-Destino</string>
    <string name="text_descripcion">Descripción</string>
    <string name="text_num_pedido">NumPedido</string>
    <string name="text_telefono">Teléfono</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="text_origen">Origen</string>
    <string name="text_destino">Destino</string>
    <string name="text_recogido">Recogido</string>
    <string name="text_entregado">Entregado</string>
    <string name="titulo_pedido_recogido">Pedido Recogido</string>
    <string name="titulo_pedido_entregado">Pedido Entregado</string>
    <string name="mensaje_pedido_recogido">¿Ha recogido el pedido?</string>
    <string name="mensaje_pedido_entregado">¿Ha entregado el pedido?</string>
    <string name="cancel">Cancelar</string>
    <string name="aceptar_recoger">Recoger</string>
    <string name="aceptar_entregar">Entregar</string>
    <string name="text_realizado">Realizado</string>
    <string name="text_informacion">Información</string>
    <string name="text_asignar">Asignar</string>
    <string name="text_abandonar">Abandonar</string>
    <string name="text_de_origen">"De: "</string>
    <string name="text_a_destino">"A: "</string>
    <string name="titulo_abandonar_pedido">Abandonar Pedido</string>
    <string name="titulo_asignar_pedido">Realizar Pedido</string>
    <string name="mensaje_abandonar_pedido">¿Está seguro de querer abandonar el pedido?</string>
    <string name="mensaje_asignar_pedido">¿Quieres realizar este pedido?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="title_activity_map_ruta">Map</string>
    <string name="text_ir_ruta">Ver ruta en el mapa</string>
    <string name="text_cod_pedido">Código de pedido</string>

</resources>
