<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_mis_pedidos">

    <fragment
        android:id="@+id/navigation_mis_pedidos"
        android:name="com.salesianostriana.foodbye.ui.mispedidos.HomeFragment"
        android:label="@string/title_mis_pedidos"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_pedidos"
        android:name="com.salesianostriana.foodbye.ui.pedidos.PedidosFragment"
        android:label="@string/title_pedidos"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.salesianostriana.foodbye.ui.profile.EditUserFragment"
        android:label="@string/title_editusers"
        tools:layout="@layout/fragment_profile" />
</navigation>
