<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@mipmap/ic_logo_foodbye" />

            <ImageButton
                android:id="@+id/imageButtonRegisterFoto"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_add_immage" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextRegisterFullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/register_fullname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextRegisterTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/register_telefono"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextRegisterPassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/hint_register_pass1"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextRegisterPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/hint_register_password2"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/button_registro"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>