<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.EditUserFragment">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/imageViewProfileFoto"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_logo_foodbye" />

    <ImageView
        android:id="@+id/imageViewProfileFoto"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageViewLogo"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <EditText
        android:id="@+id/ediTextProfileFullname"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/register_fullname"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextProfileEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfileFoto" />

    <EditText
        android:id="@+id/editTextProfileEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextProfilePhone"
        app:layout_constraintEnd_toEndOf="@+id/ediTextProfileFullname"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/ediTextProfileFullname"
        app:layout_constraintTop_toBottomOf="@+id/ediTextProfileFullname" />

    <EditText
        android:id="@+id/editTextProfilePhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/register_telefono"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/buttonProfileSave"
        app:layout_constraintEnd_toEndOf="@+id/editTextProfileEmail"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editTextProfileEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextProfileEmail" />

    <Button
        android:id="@+id/buttonProfileSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/btn_profile_save"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewProfileChangePassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextProfilePhone"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editTextProfilePhone"
        app:layout_constraintTop_toBottomOf="@+id/editTextProfilePhone" />

    <TextView
        android:id="@+id/textViewProfileChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/profile_password"
        android:textColor="@color/design_default_color_primary"
        app:layout_constraintEnd_toEndOf="@+id/buttonProfileSave"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/buttonProfileSave"
        app:layout_constraintTop_toBottomOf="@+id/buttonProfileSave" />
</androidx.constraintlayout.widget.ConstraintLayout>