<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.EditPasswordActivity">

    <ProgressBar
        android:id="@+id/progressBarPassword"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/DataCambioPass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewProfileFoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageViewLogo"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars"
                    tools:visibility="visible" />

                <ImageView
                    android:id="@+id/imageViewLogo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/imageViewProfileFoto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ic_logo_foodbye"
                    tools:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewProfileChangePassTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/profile_title_changEpassword"
                android:textAlignment="center"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewProfileFoto" />

            <EditText
                android:id="@+id/editTextProfilePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/profile_edit_password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/editTextProfileNewPassword1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewProfileChangePassTitle" />

            <EditText
                android:id="@+id/editTextProfileNewPassword1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/profile_edit_newpassword1"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/editTextProfileNewPassword2"
                app:layout_constraintEnd_toEndOf="@+id/editTextProfilePassword"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/editTextProfilePassword"
                app:layout_constraintTop_toBottomOf="@+id/editTextProfilePassword" />

            <EditText
                android:id="@+id/editTextProfileNewPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/profile_edit_newpassword2"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/buttonProfileChangePassword"
                app:layout_constraintEnd_toEndOf="@+id/editTextProfileNewPassword1"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/editTextProfileNewPassword1"
                app:layout_constraintTop_toBottomOf="@+id/editTextProfileNewPassword1" />

            <Button
                android:id="@+id/buttonProfileChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@android:color/holo_orange_light"
                android:text="@string/btn_profile_save"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/editTextProfileNewPassword2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/editTextProfileNewPassword2"
                app:layout_constraintTop_toBottomOf="@+id/editTextProfileNewPassword2" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>